--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.7",
     "lodash": "^4.17.15",
-    "mongoose": "^5.7.1"
+    "mixin-deep": "^1.3.2",
+    "mongoose": "^5.7.1",
+    "set-value": "^2.0.1"
   }
 }
